--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -101,6 +101,7 @@
 
 
 {% block footer_block %}
+<script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
 <script src="{% static "js/subst_select.js" %}"></script>
 <script src="{% static "js/select2/select2.min.js" %}"></script>
