--- a/chemcloud/templates/chemical/scheme_detail.html
+++ b/chemcloud/templates/chemical/scheme_detail.html
@@ -84,5 +84,6 @@
 {% endblock %}
 
 {% block footer_block %}
+<script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
 {% endblock %}
