--- a/chemcloud/templates/chemical/exper_serie_detail.html
+++ b/chemcloud/templates/chemical/exper_serie_detail.html
@@ -87,7 +87,7 @@
 
 
 {% block footer_block %}
-
+<script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
 
 
