--- a/chemcloud/templates/chemical/reaction_detail.html
+++ b/chemcloud/templates/chemical/reaction_detail.html
@@ -147,5 +147,6 @@
 {% endblock %}
 
 {% block footer_block %}
+<script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
 {% endblock %}
