--- a/chemcloud/templates/chemical/step_detail.html
+++ b/chemcloud/templates/chemical/step_detail.html
@@ -77,5 +77,6 @@
 {% endblock %}
 
 {% block footer_block %}
+<script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
 {% endblock %}
