Подготовка к выводу точек Экспериментов. Нечаянно чуть не затерла Ритины изменения, поэтому вручную возвращала

--- a/chemcloud/templates/chemical/experiment_edit.html
+++ b/chemcloud/templates/chemical/experiment_edit.html
@@ -15,14 +15,7 @@
    
               <label class="checkbox-inline"><input type="checkbox" checked="checked" id="chbox_alias">Псевдонимы</label>
              <label class="checkbox-inline"><input type="checkbox" id="chbox_brutto_short">Краткие формулы</label>
-              
-          <!--     <label class="radio-inline">
-          <input name="radioGroupInit" id="radio1" value="alias" type="radio" checked="checked"> Псевдонимы
-        </label>
-        <label class="radio-inline">
-          <input name="radioGroupInit" id="radio2" value="formula" type="radio"> Краткие формулы
-        </label>
-               -->        
+                  
         </div>
             
 
@@ -126,10 +119,10 @@
       <label class="control-label">Вид: </label>
          
     <label class="radio-inline">
-          <input name="radioGroupSubst" id="radio3" value="table" type="radio" checked="checked"> Таблица
+          <input name="radioGroupSubst" id="radio3" value="table" type="radio" checked="checked" disabled="disabled"> Таблица
         </label>
         <label class="radio-inline">
-          <input name="radioGroupSubst" id="radio4" value="graph" type="radio"> График
+          <input name="radioGroupSubst" id="radio4" value="graph" type="radio" disabled="disabled"> График
         </label>       
         </div>
         
