--- a/chemcloud/templates/chemical/scheme_edit.html
+++ b/chemcloud/templates/chemical/scheme_edit.html
@@ -34,8 +34,8 @@
 							<th class="order orderable"><a href="?sort=order">№ п/п</a></th>
 							<th class="name orderable"><a href="?sort=name">Обозначение</a></th>
 							<th class="step">Стадия</th>
-							<th class="remove">Удалить</th>
-							<th class="detail_link">Детали</th>
+							<th class="remove"></th>
+							<th class="detail_link"></th>
                             <th class="info"></th>
 						</tr>
 					</thead>
