--- a/chemcloud/templates/chemical/problem_init.html
+++ b/chemcloud/templates/chemical/problem_init.html
@@ -16,7 +16,7 @@
 			    <div class="col-xs-12">
 			        
 			       
-        <form method="POST" class="form-horizontal" action="">
+        <form method="POST"  action="">
   <div class="panel-group"> 
      
      
