стиль таблиц покрупнее

--- a/chemcloud/static/django_tables2/themes/paleblue/css/screen.css
+++ b/chemcloud/static/django_tables2/themes/paleblue/css/screen.css
@@ -2,11 +2,13 @@ table.paleblue {
     border-collapse: collapse;
     border-color: #CCC;
     border: 1px solid #DDD;
+    
 }
 
 table.paleblue,
 table.paleblue +  ul.pagination {
-    font: normal 11px/14px 'Lucida Grande', Verdana, Helvetica, Arial, sans-serif;
+    font: normal 14px/16px 'Lucida Grande', Verdana, Helvetica, Arial, sans-serif;
+    width: 100%;
 }
 
 table.paleblue a:link,
@@ -24,7 +26,7 @@ table.paleblue a:hover {
 table.paleblue td,
 table.paleblue th {
     padding: 5px;
-    line-height: 13px;
+    line-height: 17px;
     border-bottom: 1px solid #EEE;
     border-left: 1px solid #DDD;
     text-align: left;
@@ -40,7 +42,7 @@ table.paleblue thead td {
     background: #FCFCFC url(../img/header-bg.png) left bottom repeat-x;
     border-bottom: 1px solid #DDD;
     padding: 2px 5px;
-    font-size: 11px;
+    font-size: 14px;
     vertical-align: middle;
     color: #666;
 }
@@ -124,4 +126,5 @@ table.paleblue > tbody > tr > td > span.false {
 
 div.table-container {
     display: inline-block;
+    width: 100%;
 }
