--- a/chemcloud/templates/chemical/experiment_all.html
+++ b/chemcloud/templates/chemical/experiment_all.html
@@ -18,7 +18,24 @@
 				</div>
 			</div>
 
-				{% render_table experiments %}
+            {% for key, value in exper_by_series.items %}
+            {%if value.exper_table%}
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#serie{{key}}">
+          {%if value.serie%} {{value.serie.name}}{% else %}Без серии{%endif%} ({{value.exper_count}} шт.)</a>
+        </h4>
+      </div>
+      <div id="serie{{key}}" class="panel-collapse {%if value.serie%} collapse {% else %} collapsed {%endif%} ">
+        <div class="panel-body">{% render_table value.exper_table %}</div>
+        
+      </div>
+    </div>
+          {%endif%}
+            
+				
+            {%endfor%}
 		{% endif %}
 	</div>
 {% endblock %}
