--- a/chemcloud/templates/chemical/problem_init_2_inverse.html
+++ b/chemcloud/templates/chemical/problem_init_2_inverse.html
@@ -53,24 +53,24 @@
     
 
       
-       <div class="panel panel-default">
-      <div class="panel-heading" >            
+    <div class="panel panel-default" hidden>
+        <div class="panel-heading" >            
         
-        <h4 class="panel-title">
-          <a data-toggle="collapse"  >Шаг 1.3. Требуется ли учитывать дополнительные ограничения?</a>
-        </h4>        
+            <h4 class="panel-title">
+              <a data-toggle="collapse"  >Шаг 1.3. Требуется ли учитывать дополнительные ограничения?</a>
+            </h4>        
         
-        <div class="checkbox checkbox-slider--b-flat checkbox-slider-info" >
-	<label >
-		<input  type="checkbox" name="check_experiment" class="checkbox_slider_with_collapse" data_id_collapsed="#step3"><span></span>
-	</label>
-          </div>
-           </div>
+            <div class="checkbox checkbox-slider--b-flat checkbox-slider-info" >
+	    <label >
+		    <input  type="checkbox" name="check_experiment" class="checkbox_slider_with_collapse" data_id_collapsed="#step3"><span></span>
+	    </label>
+            </div>
+        </div>
       
-      <div id="step3" class="panel-collapse collapse">
-        <div class="panel-body">Panel Body</div>
-        <div class="panel-footer">Panel Footer</div>
-      </div>
+        <div id="step3" class="panel-collapse collapse">
+            <div class="panel-body">Panel Body</div>
+            <div class="panel-footer">Panel Footer</div>
+        </div>
     </div>
     
    
@@ -81,8 +81,37 @@
         </h4>
       </div>
       <div id="step4" class="panel-collapse collapse">
-        <div class="panel-body">Panel Body</div>
-        <div class="panel-footer">Panel Footer</div>
+        <div class="panel-body">
+            <div class="form-group">
+            <div class="table-responsive ">
+                <table class="table table-bordered ">
+                    <thread>
+                        <tr>
+                            <th> Серия </th>
+                            <th> Название эксперимента </th>
+                            <th> Выбрать </th>
+                            <th hidden> Настроить </th>
+                        </tr>
+                    </thread>
+
+                    <tbody>
+{% if problem_context.expers_value_list %}	
+						{% for exper_i in problem_context.expers_value_list %}
+						<tr >
+							<td> {% if exper_i.0.exper_serie %} {{exper_i.0.exper_serie.name}} {% else %} - {% endif %} </td>
+                            <td>{{ exper_i.0.name }}</td>
+                            <td> <div class="checkbox"> <label> <input type="checkbox" {% if exper_i.1 %} checked {% endif %}></label></td>
+                            <td hidden> Настроить </td>
+						</tr>
+						{% endfor %}
+		{% endif %}
+
+                    </tbody>
+                </table>
+            </div>
+            </div>
+        </div>
+       <!-- <div class="panel-footer">Panel Footer</div> -->
       </div>
     </div>
     
