Редактирование Вещества реакции в деталях

--- a/chemcloud/templates/chemical/react_substance_new.html
+++ b/chemcloud/templates/chemical/react_substance_new.html
@@ -90,9 +90,11 @@
 
             </div>
 		
-		<div class="col-xs-4">
+		<div class="col-xs-4 pre-scrollable">
+           <div class="container pre-scrollable" >
             {% render_table substance %}
             </div>
+        </div>
    </div>
 </div>
 {% endblock %}
