--- a/chemcloud/templates/chemical/react_substance_detail.html
+++ b/chemcloud/templates/chemical/react_substance_detail.html
@@ -23,21 +23,26 @@
             
   <table class="table">
      <tbody id="detail_main" model_name="Reaction_subst" url_edit="{% url 'react_substance_detail_edit' id_reaction substance.pk %}" >
-    
-     {% if substance.substance %}
-    <!-- <tr> 
-     <td class="detail_caption">Вещество </td>
-  <td class="detail_value">    
-   <select class="select2 col-xs-12" data-check-url = "{% url 'substance_search_list'%}" > 
+    <tr>
+    <td class="detail_caption">Вещество:</td>
+  <td class="detail_value disabled">    
+   <select class="select2 col-xs-12 " id="id_substance" name="substance"  data-check-url = "{% url 'substance_search_list'%}"
+    data-init-id="{{substance.substance.pk}}" 
+    data-init-name="{{  substance.substance.name }} {{  substance.substance.formula_brutto_formatted | safe}}" 
+   
+    >
+ 
 </select>
     </td> 
-        {% if is_owner %}
+    {% if is_owner %}
         <td class="detail_edit" > </td>         
          <td class="detail_btns" field_name="substance">     
         </td>
         {% endif %}
          </tr>
-     -->
+         <!-- 
+     {% if substance.substance %}
+    
     <tr>
         <td class="detail_caption">Название:</td>
         <td class="detail_value">{{  substance.substance.name }}</td>
@@ -48,7 +53,7 @@
         <td class="detail_value">{{  substance.substance.formula_brutto_formatted | safe}}</td>
       </tr>
       {% endif %}
-      
+      -->
       <tr>
       <td class="detail_caption">Псеводним:</td>
       <td class="detail_value"><input class="box_input"  type="text" disabled="disabled" value="{{  substance.alias }}"/></td>
@@ -103,7 +108,6 @@
 {% block footer_block %}
 <script src="{% static "js/populate_dict_select.js" %}"></script>
 <script src="{% static "js/details.js" %}"></script>
-<script src="{% static "js/subst_select.js" %}"></script>
 <script src="{% static "js/select2/select2.min.js" %}"></script>
 <script src="{% static "js/select2/i18n/ru.js" %}"></script>
 {% endblock %}
