--- a/chemcloud/templates/chemical/experiment_all.html
+++ b/chemcloud/templates/chemical/experiment_all.html
@@ -1,34 +1,27 @@
-{% extends 'chemical/base_reaction.html' %}
-
-{% load staticfiles %}
+{% extends 'chemical/experiment_all_base.html' %}
 {% load render_table from django_tables2 %}
 
-{% block body_block %}
-	<div class="page-header">
-		<h1>Эксперименты</h1>
-	</div>
-	
-            <div class="page-content">
-		{% if id_reaction %}
-			<div class="panel panel-default">
-				<div class="panel-body">
-					<a class = "btn btn-new" href = "{% url 'experiment_new' id_reaction %}" role = "button">Создать эксперимент</a> 
-					
-					<a class = "btn btn-new" href = "{% url 'exper_serie_new' id_reaction %}" role = "button">Создать серию для экспериментов</a>
-				</div>
-			</div>
+{% block exper_list_block %}  
 
-            {% for value in exper_by_series %}
+ {% for value in exper_by_series %}
     
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="panel-title">
-          <a data-toggle="collapse" href="#serie{{value.serie.pk}}">
-          {%if value.serie%} {{value.serie.name}}{% else %}Без серии{%endif%} ({{value.exper_count}} шт.)   {{value.serie_detail_link|safe}}</a>
+          <a data-toggle="collapse" href="#serie{{value.serie.pk}}" class="toggle-serie">
+             
+              
+              <div class="row">
+              
+                  <div class="col-md-6"><span class="glyphicon glyphicon-eject"></span> {%if value.serie%} {{value.serie.name}}{% else %}Без серии{%endif%} ({{value.exper_count}} шт.)</div>
+    <div class="col-md-6 text-right">{{value.serie_detail_link|safe}}</div>
+  </div>
+              
+              </a>
             
         </h4>
       </div>
-      <div id="serie{{value.serie.pk}}" class="panel-collapse {%if value.exper_count > 0%} collapsed {% else %} collapse {%endif%} ">
+      <div id="serie{{value.serie.pk}}" class="panel-collapse collapse {%if value.exper_count > 0%} in {%endif%} ">
         <div class="panel-body">
         {%if value.exper_count > 0%}
         {% render_table value.exper_table %}
@@ -40,7 +33,8 @@
           
             
 				
-            {%endfor%}
-		{% endif %}
-	</div>
+    {%endfor%}
+    
 {% endblock %}
+
+
