Отображение данных Экспериментов. Начало.

--- a/chemcloud/templates/chemical/experiment_edit.html
+++ b/chemcloud/templates/chemical/experiment_edit.html
@@ -12,10 +12,11 @@
 		
 <div class="row"><div class="col-xs-12">		       
 			    <div class="controls-row">
-      <label class="control-label">Отображать для веществ: </label>
+      <label class="control-label">Отображать краткие формулы
    
-              <label class="checkbox-inline"><input type="checkbox" checked="checked" id="chbox_alias">Псевдонимы</label>
-             <label class="checkbox-inline"><input type="checkbox" id="chbox_brutto_short">Краткие формулы</label>
+         <!--     <label class="checkbox-inline"><input type="checkbox" checked="checked" id="chbox_alias">Псевдонимы</label>
+              -->
+             <input type="checkbox" id="chbox_brutto_short"></label>
                   
         </div>
             
@@ -116,7 +117,7 @@
         <div class="panel-body">
         
        
-       
+     <!--  
       <div class="controls-row">
       <label class="control-label">Вид: </label>
          
@@ -127,7 +128,7 @@
           <input name="radioGroupSubst" id="radio4" value="graph" type="radio" disabled="disabled"> График
         </label>       
         </div>
-        
+        -->
         
         
         
